--- a/tutorial/notebooks/Multiple Choice Task - Person Type Annotation in Video.ipynb
+++ b/tutorial/notebooks/Multiple Choice Task - Person Type Annotation in Video.ipynb
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Declaring a pre-processing configuration\n",
+    "# Declaring a pre-processing configuration\n",
     "\n",
     "The pre-processing configuration defines how to interpret the raw crowdsourcing input. To do this, we need to define a configuration class. First, we import the default CrowdTruth configuration class:"
    ]
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pre-processing the input data\n",
+    "# Pre-processing the input data\n",
     "\n",
     "After declaring the configuration of our input file, we are ready to pre-process the crowd data:"
    ]
@@ -508,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Computing the CrowdTruth metrics\n",
+    "# Computing the CrowdTruth metrics\n",
     "\n",
     "The pre-processed data can then be used to calculate the CrowdTruth metrics:"
    ]
@@ -526,9 +526,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`results` is a dict object that contains the quality metrics for video fragments, annotations and crowd workers.\n",
+    "# Video fragment quality\n",
     "\n",
-    "The **video fragments metrics** are stored in `results[\"units\"]`:"
+    "The **video fragments metrics** are stored in `results[\"units\"]`. The uqs column in `results[\"units\"]` contains the video fragment quality scores, capturing the overall workers agreement over each video fragment."
    ]
   },
   {
@@ -775,14 +775,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `uqs` column in `results[\"units\"]` contains the **video fragment quality scores**, capturing the overall workers agreement over each video fragment. Here we plot its histogram:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Video Fragment Quality Score"
+    "## Distribution of video fragment quality scores\n",
+    "\n",
+    "The histogram below shows **video fragment quality scores** are nicely distributed, with both low and high quality video fragments."
    ]
   },
   {
@@ -859,9 +854,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ambiguous video fragments\n",
+    "## Ambiguous video fragments\n",
     "\n",
-    "A low unit quality score can be used to identify ambiguous video fragments:"
+    "A low unit quality score can be used to identify ambiguous video fragments. First, we sort the unit quality metrics stored in `results[\"units\"]` based on the quality score (`uqs`), in ascending order. Thus, the most clear video fragments are found at the tail of the new structure:"
    ]
   },
   {
@@ -967,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An example video fragment with low quality score, where workers couldn't agree on what annotation best describes the person in the video."
+    "Below we show an example video fragment with low quality score, where workers couldn't agree on what annotation best describes the person in the video. The role of the person in the video is not directly specified, so the workers made assumptions based on the topic of discussion."
    ]
   },
   {
@@ -984,19 +979,19 @@
       "\n",
       "\n",
       "Person types picked for the video below:\n",
-      "other ; 0.28844109454744976\n",
-      "presenter ; 0.144930232611664\n",
-      "scientist ; 0.22919915879815284\n",
-      "journalist ; 0.14534325083723273\n",
-      "artist ; 0.005696670688424697\n",
-      "businessperson ; 0.10163406871362905\n",
-      "politician ; 0.03781678033568675\n",
-      "none ; 0.21943896131257373\n",
-      "lawyer ; 0.020785177196552786\n",
-      "philosopher ; 0.0056418079486984535\n",
-      "architect ; 3.3953714172294374e-05\n",
-      "astronaut ; 3.3953714172294374e-05\n",
-      "athlete ; 3.3953714172294374e-05\n"
+      "other : 0.28844109454744976\n",
+      "presenter : 0.144930232611664\n",
+      "scientist : 0.22919915879815284\n",
+      "journalist : 0.14534325083723273\n",
+      "artist : 0.005696670688424697\n",
+      "businessperson : 0.10163406871362905\n",
+      "politician : 0.03781678033568675\n",
+      "none : 0.21943896131257373\n",
+      "lawyer : 0.020785177196552786\n",
+      "philosopher : 0.0056418079486984535\n",
+      "architect : 3.3953714172294374e-05\n",
+      "astronaut : 3.3953714172294374e-05\n",
+      "athlete : 3.3953714172294374e-05\n"
      ]
     },
     {
@@ -1022,7 +1017,7 @@
     "print(\"Person types picked for the video below:\")\n",
     "for k, v in results[\"units\"].sort_values(by=[\"uqs\"])[[\"unit_annotation_score\"]].iloc[0][\"unit_annotation_score\"].items():\n",
     "    if v > 0:\n",
-    "        print(str(k) + \" ; \" + str(v))\n",
+    "        print(str(k) + \" : \" + str(v))\n",
     "\n",
     "vid_url = list(results[\"units\"].sort_values(by=[\"uqs\"])[[\"input.videolocation\"]].iloc[0])\n",
     "HTML(\"<video width='320' height='240' controls><source src=\" + vid_url[0] + \" type='video/mp4'></video>\")"
@@ -1032,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unambiguous video fragments\n",
+    "## Unambiguous video fragments\n",
     "\n",
     "Similarly, a high unit quality score represents lack of ambiguity of the video fragment."
    ]
@@ -1140,7 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An example unambiguous video fragment - no person appears in the video, so most workers picked the `none` option in the crowd task."
+    "Below we show an example unambiguous video fragment - no person appears in the video, so most workers picked the `none` option in the crowd task."
    ]
   },
   {
@@ -1157,8 +1152,8 @@
       "\n",
       "\n",
       "Person types picked for the video below:\n",
-      "none ; 0.9993036353660087\n",
-      "militaryperson ; 0.0006963646339910918\n"
+      "none : 0.9993036353660087\n",
+      "militaryperson : 0.0006963646339910918\n"
      ]
     },
     {
@@ -1182,7 +1177,7 @@
     "print(\"Person types picked for the video below:\")\n",
     "for k, v in results[\"units\"].sort_values(by=[\"uqs\"], ascending=False)[[\"unit_annotation_score\"]].iloc[0][\"unit_annotation_score\"].items():\n",
     "    if v > 0:\n",
-    "        print(str(k) + \" ; \" + str(v))\n",
+    "        print(str(k) + \" : \" + str(v))\n",
     "\n",
     "vid_url = list(results[\"units\"].sort_values(by=[\"uqs\"], ascending=False)[[\"input.videolocation\"]].iloc[0])\n",
     "HTML(\"<video width='320' height='240' controls><source src=\" + vid_url[0] + \" type='video/mp4'></video>\")"
@@ -1192,14 +1187,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Worker Quality Scores"
+    "# Worker Quality Scores"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **worker metrics** are stored in `results[\"workers\"]`:"
+    "The **worker metrics** are stored in `results[\"workers\"]`. The `wqs` columns in `results[\"workers\"]` contains the **worker quality scores**, capturing the overall agreement between one worker and all the other workers."
    ]
   },
   {
@@ -1354,7 +1349,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `wqs` columns in `results[\"workers\"]` contains the **worker quality scores**, capturing the overall agreement between one worker and all the other workers."
+    "## Distribution of worker quality scores\n",
+    "\n",
+    "The histogram below shows the worker quality scores are distributed across a wide spectrum, from low to high quality workers."
    ]
   },
   {
@@ -1397,7 +1394,7 @@
    "source": [
     "### Low quality workers\n",
     "\n",
-    "Low worker quality scores can be used to identify workers that are spammers / have misunderstood the annotation task."
+    "Low worker quality scores can be used to identify **spam workers**, or workers that have misunderstood the annotation task."
    ]
   },
   {
@@ -1626,7 +1623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example annotations from the same low quality worker `44606916` for a second video fragment `1856509903`:"
+    "Example annotations from the same low quality worker (`44606916`) for a second video fragment (`1856509903`):"
    ]
   },
   {
@@ -1690,7 +1687,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### High quality workers"
+    "## High quality workers\n",
+    "\n",
+    "High worker quality scores can be used to identify **reliable workers**."
    ]
   },
   {
@@ -1971,9 +1970,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Worker Quality vs. # Annotations\n",
+    "## Worker Quality vs. # Annotations\n",
     "\n",
-    "There is no correlation between worker quality and number of annotations collected from the worker."
+    "As we can see from the plot below, there is no clear correlation between worker quality and number of annotations collected from the worker."
    ]
   },
   {
@@ -2014,14 +2013,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Annotation Quality Scores"
+    "# Annotation Quality Scores"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **annotation metrics** are stored in `results[\"annotations\"]`. The `aqs` column contains the **annotation quality scores**, capturing the overall worker agreement over one annotation."
+    "The **annotation metrics** are stored in `results[\"annotations\"]`. The `aqs` column contains the **annotation quality scores**, capturing the overall worker agreement over one annotation.\n",
+    "\n",
+    "There is a slight correlation between the number of annotations (column `output.selected_answer`) and the annotation quality score - annotations that have not been picked often (e.g. `engineer`, `farmer`) tend to have lower quality scores - this is because these annotations are less present in the corpus, therefore the likelihood that they are picked is lower, and when they do get picked it is more likely it was a mistake by the worker. However, it is not a set rule, and there exist annotations that are picked less often (e.g. `astronaut`) that can have high quality scores."
    ]
   },
   {
